--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
       </li>
       {% for my_page in site.pages %}
         {% if my_page.title %}
-        <li class="inline-block block-lg text-right ml-1 ml-lg-0">
+        <li class="inline-block text-right ml-1 ml-lg-0">
           <a class="italic no-underline h4" href="{{ my_page.url | prepend: site.baseurl }}">
             {{ my_page.title }}
           </a>
